--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,4 +14,9 @@ sonar.sources=.
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 
+#Exclusions
 sonar.exclusions=coverage/**, node_modules/**, testing/**
+
+#Sonar Test
+sonar.test=testing/
+
