--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,6 +17,9 @@ sonar.sourceEncoding=UTF-8
 #Exclusions
 sonar.exclusions=coverage/**, node_modules/**, testing/**
 
-#Sonar Test
+#Untuk test hasil testing dari jest
+#Scan Sonar Test
 sonar.test=testing/
 
+#Scan Coverage
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
